[package]
name = "mongodb-ext-derive"
description = "proc-macro crate to support the mongodb-ext crate"
version = "1.1.2"
edition = "2021"
keywords = ["snake_case", "camelCase", "macro", "derive", "name"]
categories = ["database", "development-tools"]
readme = "README.md"
license-file = "../LICENSE"
repository = "https://github.com/cpu-runtime/mongodb-ext"
documentation = "https://docs.rs/mongodb-ext-derive/"

[lib]
proc-macro = true

[dependencies]
convert_case = "0"
syn = "1"
proc-macro2 = "1"
quote = "1"