[package]
name = "mongodb-ext"
description = "An extension crate for mongodb to create a database setup without boilerplate."
version = "4.1.0"
edition = "2021"
keywords = ["mongodb", "macro", "collection", "database", "schema"]
categories = ["database", "development-tools"]
readme = "README.md"
license-file = "../LICENSE"
repository = "https://github.com/cpu-runtime/mongodb-ext"
documentation = "https://docs.rs/mongodb-ext/"

[dependencies]
serde = "1"
typed-builder = "0"
async-trait = "0"
paste = "1"
mongodb-ext-derive = "1"
mongodb = "2"

[dev-dependencies]
serde = "1"
serde_json = "1"
tokio-test = "0"